@@ -1,6 +1,11 @@
 Next release
 ============
 
+- Add ``includeme`` function (meant to be used via ``config.include``).
+
+- Fix documentation bug related to ``paster create`` reported at
+  https://github.com/Pylons/pyramid_jinja2/issues#issue/12
+
 0.4 (2010-12-16)
 ================
 
